Fix supernova item overlapping

--- a/packages/block-library/src/blocks/supernova-item/style.scss
+++ b/packages/block-library/src/blocks/supernova-item/style.scss
@@ -4,3 +4,43 @@
     display: block;
   }
 }
+
+:is( .supernova--card-layout-horizontal, .supernova--card-layout-horizontal-reverse ) {
+  --block-top-spacing: var(--nb-block-top-spacing, 0);
+  --block-bottom-spacing: var(--nb-block-bottom-spacing, 0);
+  --emphasis-top-spacing: var(--nb-emphasis-top-spacing, 0);
+  --emphasis-bottom-spacing: var(--nb-emphasis-bottom-spacing, 0);
+
+  margin-top: calc(var(--block-top-spacing) * var(--nb-spacing));
+  margin-bottom: calc(var(--block-bottom-spacing) * var(--nb-spacing));
+
+  @include above(tablet) {
+
+    .supernova-item {
+
+      .supernova-item__media-wrapper {
+        margin-top: calc( var(--emphasis-top-spacing) * var(--nb-spacing));
+        margin-bottom: calc( var(--emphasis-bottom-spacing) * var(--nb-spacing));
+      }
+
+      .supernova-item__content {
+        padding-top: calc( var(--emphasis-top-spacing) * var(--nb-spacing));
+        padding-bottom: calc( var(--emphasis-bottom-spacing) * var(--nb-spacing));
+      }
+    }
+
+    @include below(tablet) {
+      --nb-card-layout-gap: 0 !important;
+      --nb-block-top-spacing: 1;
+      --nb-block-bottom-spacing: 1;
+      --nb-emphasis-top-spacing: 0;
+      --nb-emphasis-bottom-spacing: 0;
+
+      .supernova-item__media-wrapper,
+      .supernova-item__content {
+        padding-top: calc( var(--nb-spacing) * 0.5 );
+        padding-bottom: calc( var(--nb-spacing) * 0.5 );
+      }
+    }
+  }
+}
